src/styles/utilities.css
.retro-title {
  --_offset: .1ex;

  font-family: "Fight", "Fight Fallback";
  text-transform: lowercase;
  font-weight: normal;
  line-height: 0.75;
  text-shadow:
    0 var(--_offset) 0 lime,
    0 calc(var(--_offset) * 2) 0 light-dark(#999, #000);

  @media (width > 1280px) {
    --_offset: 5px;
  }
}

.grid-pile {
  display: grid;

  > * {
    grid-area: 1/1;
  }
}

.fullheight {
  block-size: 100svb;
  display: grid;
  place-content: center;
  place-content: safe center;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

